# 8080-emulator

./: .gitignore  ;  CMakeLists.txt  README.md  ]  cpu.c  cpu.out  diary.md  disassembler  disassembler.c  invadersAssembly.s  invadersBinary.txt  shell.c
.cache/clangd/index/: cpu.c.B2FC32023226791B.idx  disassembler.c.D1A51647AEA0E3BA.idx
src/: main.c
